--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dc63ce">  <td>18/02/10 15:00:41</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC001_VerifyLogin.setUp()[pri:0, instance:com.test.qa.Amazon.LoginPage.TC001_VerifyLogin@8bd1b6a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="dc63ce">  <td>18/02/10 15:00:54</td>   <td>13084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_VerifyLogin.verifyLogin()[pri:0, instance:com.test.qa.Amazon.LoginPage.TC001_VerifyLogin@8bd1b6a]">verifyLogin</td> 
-  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="dc63ce">  <td>18/02/10 15:01:18</td>   <td>36555</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_VerifyLogin.endTest()[pri:0, instance:com.test.qa.Amazon.LoginPage.TC001_VerifyLogin@8bd1b6a]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="f8966d">  <td>18/02/11 11:44:25</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC001_VerifyLogin.setUp()[pri:0, instance:com.test.qa.Amazon.LoginPage.TC001_VerifyLogin@5442a311]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
+<tr bgcolor="f8966d">  <td>18/02/11 11:44:33</td>   <td>8243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_VerifyLogin.verifyLogin()[pri:0, instance:com.test.qa.Amazon.LoginPage.TC001_VerifyLogin@5442a311]">verifyLogin</td> 
+  <td>main@701141022</td>   <td></td> </tr>
+<tr bgcolor="f8966d">  <td>18/02/11 11:44:52</td>   <td>27088</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_VerifyLogin.endTest()[pri:0, instance:com.test.qa.Amazon.LoginPage.TC001_VerifyLogin@5442a311]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
 </table>
