Screen shot code is added.

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Mohammed Sohaib\AppData\Local\Temp\testng-eclipse-4251592\testng-customsuite.xml</span>
+                    <span>C:\Users\Mohammed Sohaib\AppData\Local\Temp\testng-eclipse--2110057527\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Mohammed Sohaib\AppData\Local\Temp\testng-eclipse-4251592\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Mohammed Sohaib\AppData\Local\Temp\testng-eclipse--2110057527\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -189,12 +189,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLogin')
 data.setCell(0, 2, 'com.test.qa.Amazon.LoginPage.TC002_LoginFromDataSheet')
-data.setCell(0, 3, 18469);
+data.setCell(0, 3, 27366);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 27 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -205,6 +205,12 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">verifyLogin(sohaibcool@gmail.com, Allah@123, y)</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output"><a href='C:\Users\Mohammed Sohaib\eclipse-workspace\Amazon\src\main\java\com\test\qa\Amazon\screenShots\verifyLoginsohaibcool@gmail.com_12_02_2018_04_48_41.png'> <img src='C:\Users\Mohammed Sohaib\eclipse-workspace\Amazon\src\main\java\com\test\qa\Amazon\screenShots\verifyLoginsohaibcool@gmail.com_12_02_2018_04_48_41.png' height='100' width='100'/> </a></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -227,11 +233,11 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLogin(sohaibcool@gmail.com, Allah@123, y)</span>
-                <span class="method-start">10360 ms</span>
+                <span class="method-start">34667 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">endTest</span>
-                <span class="method-start">28830 ms</span>
+                <span class="method-start">62034 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
