--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,2 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td><a href='C:\Users\Mohammed Sohaib\eclipse-workspace\Amazon\src\main\java\com\test\qa\Amazon\screenShots\verifyLoginsohaibcool@gmail.com_12_02_2018_04_48_41.png'> <img src='C:\Users\Mohammed Sohaib\eclipse-workspace\Amazon\src\main\java\com\test\qa\Amazon\screenShots\verifyLoginsohaibcool@gmail.com_12_02_2018_04_48_41.png' height='100' width='100'/> </a></td></tr>
+</table>
