--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c78c6b">  <td>18/02/12 16:48:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC002_LoginFromDataSheet.endTest()[pri:0, instance:com.test.qa.Amazon.LoginPage.TC002_LoginFromDataSheet@e25b2fe]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/02/12 16:47:39</td>   <td>-62030</td> <td>&nbsp;</td><td title="&gt;&gt;TC002_LoginFromDataSheet.setUp()[pri:0, instance:com.test.qa.Amazon.LoginPage.TC002_LoginFromDataSheet@e25b2fe]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/02/12 16:48:14</td>   <td>-27368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_LoginFromDataSheet.verifyLogin(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.test.qa.Amazon.LoginPage.TC002_LoginFromDataSheet@e25b2fe]">verifyLogin</td> 
-  <td>main@540159270</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>18/02/13 12:41:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003_SelectShoppingItem.endTest()[pri:0, instance:com.test.qa.Amazon.LoginPage.TC003_SelectShoppingItem@2f4948e4]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>18/02/13 10:39:33</td>   <td>-7287626</td> <td>&nbsp;</td><td title="&gt;&gt;TC003_SelectShoppingItem.setUp()[pri:0, instance:com.test.qa.Amazon.LoginPage.TC003_SelectShoppingItem@2f4948e4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>18/02/13 10:39:47</td>   <td>-7273980</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003_SelectShoppingItem.verifyLogin(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.test.qa.Amazon.LoginPage.TC003_SelectShoppingItem@2f4948e4]">verifyLogin</td> 
+  <td>main@1004023029</td>   <td></td> </tr>
 </table>
